# AllahPan

./: .gitignore  AllahPan-Linux.spec  AllahPan-macOS.spec  AllahPan.spec  README.md  launcher.py  pyrightconfig.json  requirements.txt  test_spec.py  version.py
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  runtime_env.py  user_dirs.py
backend/app/api/v1/: __init__.py  ai.py  auth.py  dependencies.py  files.py  system.py  tunnel.py
backend/app/database/: chroma.py  sqlite.py
backend/app/database/repositories/: file_repository.py  user_repository.py  vector_repository.py
backend/app/models/: file_metadata.py  user.py
backend/app/observability/: __init__.py  http_middleware.py  traffic_stats.py
backend/app/services/: __init__.py  image_parser.py  index_maintenance.py  ollama_manager.py  search_query_keywords.py  tunnel_manager.py
backend/app/watcher/: __init__.py  handler.py  watcher.py
backend/ollama/: __init__.py  ollama_client.py
design/: 项目详细描述.txt
docs/: 出门手机访问-差距与实现.md  桌面端MacOS风格UI改造建议.md  桌面端显示与交互改进建议.md
frontend_desktop/: README.md  config.py  main_window.py  pyrightconfig.json  requirements.txt  run.py
frontend_desktop/api/: __init__.py  ai.py  auth.py  client.py  files.py  ollama.py  system.py  tunnel.py
frontend_desktop/pages/: __init__.py  login_page.py  ops_dashboard_page.py  settings_page.py
frontend_desktop/theme/: __init__.py  dark.py  (+2 more)
frontend_web/: README.md  index.html  run.py  使用指南.md
packaging/: build_macos_app.sh  build_macos_dmg.sh  pyi_rth_qt_dll.py
前期的概要设计/: 开发顺序.md  当前代办
(+9 files in other folders)
