[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "allahpan-backend"
version = "0.1.0"
description = "AllahPan Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic[email]>=2.5.0",
    "bcrypt>=4.0.1",
    "chromadb>=0.4.22",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "watchdog>=3.0.0",
    "python-jose[cryptography]>=3.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
